Update some function
update like dislike
update view

--- a/WebApplication2/WebApplication2/WebApplication2.csproj
+++ b/WebApplication2/WebApplication2/WebApplication2.csproj
@@ -134,10 +134,12 @@
     <Compile Include="Areas\Admin\Controllers\DepartmentsController.cs" />
     <Compile Include="Areas\Admin\Controllers\HomeAdminController.cs" />
     <Compile Include="Areas\Admin\Controllers\IdeasController.cs" />
+    <Compile Include="Areas\Admin\Controllers\ReactsController.cs" />
     <Compile Include="Areas\Admin\Controllers\RolesController.cs" />
     <Compile Include="Areas\Admin\Controllers\StaffTopicsController.cs" />
     <Compile Include="Areas\Admin\Controllers\TopicsController.cs" />
     <Compile Include="Areas\Admin\Controllers\UsersController.cs" />
+    <Compile Include="Areas\Admin\Controllers\ViewsController.cs" />
     <Compile Include="Controllers\CategoriesController.cs" />
     <Compile Include="Controllers\DepartmentsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -275,6 +277,17 @@
     <Content Include="Areas\Admin\Views\Ideas\Create.cshtml" />
     <Content Include="Areas\Admin\Views\Ideas\Details.cshtml" />
     <Content Include="Areas\Admin\Views\Ideas\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Categories\ErrorDelete.cshtml" />
+    <Content Include="Areas\Admin\Views\Views\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\Views\Delete.cshtml" />
+    <Content Include="Areas\Admin\Views\Views\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\Views\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\Views\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Reacts\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\Reacts\Delete.cshtml" />
+    <Content Include="Areas\Admin\Views\Reacts\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\Reacts\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\Reacts\Index.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
